--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,17 +2,24 @@ pipeline {
     agent any
 
     stages {
-        stage('Build Docker Image') {
+
+        stage('Checkout Code') {
             steps {
-                sh 'docker build -t simple-python-app .'
+                checkout scm
             }
         }
 
-        stage('Run Docker Container') {
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -t flask-jenkins-app:1.0 .'
+            }
+        }
+
+        stage('Run Flask App') {
             steps {
                 sh '''
-                docker rm -f simple_python_container || true
-                docker run --name simple_python_container simple-python-app
+                docker rm -f flask_container || true
+                docker run -d -p 5000:5000 --name flask_container flask-jenkins-app:1.0
                 '''
             }
         }
